@@ -56,6 +56,7 @@ OPENSEADRAGON CHANGELOG
     * Viewer.innerTracker.scrollHandler: preventDefaultAction == true prevents viewer zooming on mousewheel/pinch
 * Fixed: IE8 error with custom buttons - "Object doesn't support this action" (#279)
 * Support IIIF servers that don't report tile dimensions (#286)
+* Added a static 'version' property to OpenSeadragon. Useful for plugins that require specific OpenSeadragon versions.
 
 0.9.131:
 
